removed aria-label from treeitems

--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -55,8 +55,7 @@
           </h3>
           <ul role="tree" aria-labelledby="tree_label">
             <li role="treeitem"
-              aria-expanded="false"
-              aria-label="Projects">
+              aria-expanded="false">
               <span>
                 Projects
               </span>
@@ -68,8 +67,7 @@
                   project-2.docx
                 </li>
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="Project 3">
+                  aria-expanded="false"">
                   <span>
                     Project 3
                   </span>
@@ -89,8 +87,7 @@
                   project-4.docx
                 </li>
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="Project 5">
+                  aria-expanded="false">
                   <span>
                     Project 5
                   </span>
@@ -118,15 +115,13 @@
               </ul>
             </li>
             <li role="treeitem"
-              aria-expanded="false"
-              aria-label="Reports">
+              aria-expanded="false">
               <span>
                 Reports
               </span>
               <ul role="group">
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="report-1">
+                  aria-expanded="false">
                   <span>
                     report-1
                   </span>
@@ -143,8 +138,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="report-2">
+                  aria-expanded="false">
                   <span>
                     report-2
                   </span>
@@ -164,8 +158,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="report-3">
+                  aria-expanded="false">
                   <span>
                     report-3
                   </span>
@@ -187,15 +180,13 @@
               </ul>
             </li>
             <li role="treeitem"
-              aria-expanded="false"
-              aria-label=" Letters">
+              aria-expanded="false">
               <span>
                 Letters
               </span>
               <ul role="group">
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="letter-1">
+                  aria-expanded="false">
                   <span>
                     letter-1
                   </span>
@@ -212,8 +203,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="letter-2">
+                  aria-expanded="false">
                   <span>
                     letter-2
                   </span>
@@ -233,8 +223,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                  aria-expanded="false"
-                  aria-label="letter-3">
+                  aria-expanded="false">
                   <span>
                     letter-3
                   </span>
@@ -409,18 +398,6 @@
               <td></td>
               <td><code>li</code></td>
               <td>Identifies the  element as a <code>treeitem</code>.</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-label=&quot;<em>string</em>&quot;</code></th>
-              <td><code>li</code></td>
-              <td>
-                <ul>
-                  <li>Defines the accessible name for the <code>treeitem</code>.</li>
-                  <li>Applied only to <code>treeitem</code> elements that are parent nodes, i.e., they contain a <code>ul</code> with the <code>group</code> role.</li>
-                  <li>Overrides browser calculation of the name from the elements contained inside of the <code>li</code> element to avoid having a long, confusing name composed of the names of every node in the branch.</li>
-                 </ul>
-              </td>
             </tr>
             <tr>
               <td></td>
