--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -54,8 +54,7 @@
           <h3 id="tree1">Foods</h3>
           <ul role="tree" aria-labelledby="tree1" >
             <li role="treeitem"
-                aria-expanded="false"
-                aria-label="Fruits">
+                aria-expanded="false">
               <span>Fruits</span>
               <ul>
                 <li role="none">
@@ -71,8 +70,7 @@
                   </a>
                 </li>
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Apples">
+                    aria-expanded="false">
                     <span>Apples</span>
                   <ul role="group">
                     <li role="none">
@@ -102,8 +100,7 @@
                   </a>
                 </li>
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Pears">
+                    aria-expanded="false">
                   <span> Pears </span>
                   <ul role="group">
                     <li>
@@ -147,13 +144,11 @@
               </ul>
             </li>
             <li role="treeitem"
-                aria-expanded="false"
-                aria-label="Vegetables">
+                aria-expanded="false">
               <span>Vegetables</span>
               <ul role="group">
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Podded Vegetables">
+                    aria-expanded="false">
                   <span>Podded Vegetables</span>
                   <ul role="group">
                     <li role="none">
@@ -177,8 +172,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Bulb and Stem Vegetables">
+                    aria-expanded="false">
                   <span>Bulb and Stem Vegetables</span>
                   <ul role="group">
                     <li role="none">
@@ -208,8 +202,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Root and Tuberous Vegetables">
+                    aria-expanded="false">
                   <span>Root and Tuberous Vegetables</span>
                   <ul role="group">
                     <li role="none">
@@ -241,13 +234,11 @@
               </ul>
             </li>
             <li role="treeitem"
-                aria-expanded="false"
-                aria-label=" Grains">
+                aria-expanded="false">
               <span>Grains</span>
               <ul role="group">
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Cereal grains">
+                    aria-expanded="false">
                   <span>Cereal Grains</span>
                   <ul role="group">
                     <li role="none">
@@ -271,8 +262,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Pseudocereal grains">
+                    aria-expanded="false">
                   <span>Pseudocereal Grains</span>
                   <ul role="group">
                     <li role="none">
@@ -302,8 +292,7 @@
                   </ul>
                 </li>
                 <li role="treeitem"
-                    aria-expanded="false"
-                    aria-label="Oilseeds">
+                    aria-expanded="false">
                   <span>Oilseeds</span>
                   <ul role="group">
                     <li role="none">
@@ -496,18 +485,6 @@
                     </ul>
                   </li>
                 </ul>
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-label=&quot;<em>string</em>&quot;</code></th>
-              <td><code>li</code></td>
-              <td>
-                <ul>
-                  <li>Defines the accessible name for the <code>treeitem</code>.</li>
-                  <li>Applied only to <code>treeitem</code> elements that are parent nodes, i.e., they contain a <code>ul</code> with the <code>group</code> role.</li>
-                  <li>Overrides browser calculation of the name from the elements contained inside of the <code>li</code> element to avoid having a long, confusing name composed of the names of every node in the branch.</li>
-                 </ul>
               </td>
             </tr>
             <tr>
