--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -54,8 +54,7 @@
               aria-level="1"
               aria-setsize="3"
               aria-posinset="1"
-              aria-expanded="false"
-              aria-label="Fruits">
+              aria-expanded="false">
               <span>Fruits</span>
               <ul>
                 <li role="none">
@@ -80,8 +79,7 @@
                   aria-level="2"
                    aria-setsize="5"
                    aria-posinset="3"
-                   aria-expanded="false"
-                  aria-label="Apples">
+                   aria-expanded="false">
                   <span>Apples</span>
                   <ul role="group">
                     <li role="none">
@@ -126,8 +124,7 @@
                     aria-level="2"
                     aria-setsize="5"
                     aria-posinset="5"
-                    aria-expanded="false"
-                    aria-label="Pears">
+                    aria-expanded="false">
                     <span> Pears </span>
                   <ul role="group">
                     <li role="none">
@@ -192,16 +189,14 @@
               aria-level="1"
               aria-setsize="3"
               aria-posinset="2"
-              aria-expanded="false"
-              aria-label="Vegetables">
+              aria-expanded="false">
               <span>Vegetables</span>
               <ul role="group">
                 <li role="treeitem"
                   aria-level="1"
                   aria-setsize="3"
                   aria-posinset="2"
-                  aria-expanded="false"
-                  aria-label="Podded Vegetables">
+                  aria-expanded="false">
                   <span>Podded Vegetables</span>
                   <ul role="group">
                     <li role="none">
@@ -237,8 +232,7 @@
                   aria-level="2"
                   aria-setsize="3"
                   aria-posinset="2"
-                  aria-expanded="false"
-                  aria-label="Bulb and Stem Vegetables">
+                  aria-expanded="false">
                   <span>Bulb and Stem Vegetables</span>
                   <ul role="group">
                     <li role="none">
@@ -283,8 +277,7 @@
                   aria-level="2"
                   aria-setsize="3"
                   aria-posinset="3"
-                  aria-expanded="false"
-                  aria-label="Root and Tuberous Vegetables">
+                  aria-expanded="false">
                   <span>Root and Tuberous Vegetables</span>
                   <ul role="group">
                     <li role="none">
@@ -331,16 +324,14 @@
               aria-level="1"
               aria-setsize="3"
               aria-posinset="3"
-              aria-expanded="false"
-              aria-label=" Grains">
+              aria-expanded="false">
               <span>Grains</span>
               <ul role="group">
                 <li role="treeitem"
                   aria-level="2"
                   aria-setsize="3"
                   aria-posinset="1"
-                  aria-expanded="false"
-                  aria-label="Cereal grains">
+                  aria-expanded="false">
                   <span>Cereal Grains</span>
                   <ul role="group">
                     <li role="none">
@@ -376,8 +367,7 @@
                   aria-level="2"
                   aria-setsize="3"
                   aria-posinset="2"
-                  aria-expanded="false"
-                  aria-label="Pseudocereal grains">
+                  aria-expanded="false">
                   <span>Pseudocereal Grains</span>
                   <ul role="group">
                     <li role="none">
@@ -422,8 +412,7 @@
                   aria-level="2"
                   aria-setsize="3"
                   aria-posinset="3"
-                  aria-expanded="false"
-                  aria-label="Oilseeds">
+                  aria-expanded="false">
                   <span>Oilseeds</span>
                   <ul role="group">
                     <li role="none">
@@ -628,18 +617,6 @@
                     </ul>
                   </li>
                 </ul>
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-label=&quot;<em>string</em>&quot;</code></th>
-              <td><code>li</code></td>
-              <td>
-                <ul>
-                  <li>Defines the accessible name for the <code>treeitem</code>.</li>
-                  <li>Applied only to <code>treeitem</code> elements that are parent nodes, i.e., they contain a <code>ul</code> with the <code>group</code> role.</li>
-                  <li>Overrides browser calculation of the name from the elements contained inside of the <code>li</code> element to avoid having a long, confusing name composed of the names of every node in the branch.</li>
-                 </ul>
               </td>
             </tr>
             <tr>
