--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -50,8 +50,7 @@
             aria-level="1"
             aria-setsize="3"
             aria-posinset="1"
-            aria-expanded="false"
-            aria-label="Projects">
+            aria-expanded="false">
             <span>
               Projects
             </span>
@@ -74,8 +73,7 @@
                 aria-level="2"
                 aria-setsize="5"
                 aria-posinset="3"
-                aria-expanded="false"
-                aria-label="project-3">
+                aria-expanded="false"">
                 <span>
                   project-3
                 </span>
@@ -114,8 +112,7 @@
                 aria-level="2"
                 aria-setsize="5"
                 aria-posinset="5"
-                aria-expanded="false"
-                aria-label="project-5">
+                aria-expanded="false">
                 <span>
                   project-5
                 </span>
@@ -170,8 +167,7 @@
             aria-level="1"
             aria-setsize="3"
             aria-posinset="2"
-            aria-expanded="false"
-            aria-label="Reports">
+            aria-expanded="false">
             <span>
               Reports
             </span>
@@ -180,8 +176,7 @@
                 aria-level="2"
                 aria-setsize="3"
                 aria-posinset="1"
-                aria-expanded="false"
-                aria-label="report-1">
+                aria-expanded="false">
                 <span>
                   report-1
                 </span>
@@ -213,8 +208,7 @@
                 aria-level="2"
                 aria-setsize="3"
                 aria-posinset="2"
-                aria-expanded="false"
-                aria-label="report-2">
+                aria-expanded="false">
                 <span>
                   report-2
                 </span>
@@ -253,8 +247,7 @@
                 aria-level="2"
                 aria-setsize="3"
                 aria-posinset="3"
-                aria-expanded="false"
-                aria-label="report-3">
+                aria-expanded="false">
                 <span>
                   report-3
                 </span>
@@ -295,8 +288,7 @@
             aria-level="1"
             aria-setsize="3"
             aria-posinset="3"
-            aria-expanded="false"
-            aria-label="Letters">
+            aria-expanded="false">
             <span>
               Letters
             </span>
@@ -305,8 +297,7 @@
                 aria-level="2"
                 aria-setsize="3"
                 aria-posinset="1"
-                aria-expanded="false"
-                aria-label="letter-1">
+                aria-expanded="false">
                 <span>
                   letter-1
                 </span>
@@ -338,8 +329,7 @@
                 aria-level="2"
                 aria-setsize="3"
                 aria-posinset="2"
-                aria-expanded="false"
-                aria-label="letter-2">
+                aria-expanded="false">
                 <span>
                   letter-2
                 </span>
@@ -378,8 +368,7 @@
                 aria-level="2"
                 aria-setsize="3"
                 aria-posinset="3"
-                aria-expanded="false"
-                aria-label="letter-3">
+                aria-expanded="false">
                 <span>
                   letter-3
                 </span>
@@ -569,18 +558,6 @@
               <td></td>
               <td><code>li</code></td>
               <td>Identifies the  element as a <code>treeitem</code>.</td>
-            </tr>
-            <tr>
-              <td></td>
-              <th scope="row"><code>aria-label=&quot;<em>string</em>&quot;</code></th>
-              <td><code>li</code></td>
-              <td>
-                <ul>
-                  <li>Defines the accessible name for the <code>treeitem</code>.</li>
-                  <li>Applied only to <code>treeitem</code> elements that are parent nodes, i.e., they contain a <code>ul</code> with the <code>group</code> role.</li>
-                  <li>Overrides browser calculation of the name from the elements contained inside of the <code>li</code> element to avoid having a long, confusing name composed of the names of every node in the branch.</li>
-                 </ul>
-              </td>
             </tr>
             <tr>
               <td></td>
