Accordion Example: Add link to review issue #401
Given the significance of the updates made in pull request #397 by @gerardkcohen,
This commit adds  a link to a review issue to gather feedback on the updates and collect issues.

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -19,6 +19,11 @@
   <main>
   <h1>Accordion Example</h1>
   <p>
+    <strong>NOTE:</strong> This example has recently been updated to include support for optional keyboard interactions.
+    Please provide feedback in
+    <a href="https://github.com/w3c/aria-practices/issues/401">issue 401.</a>
+  </p>
+  <p>
     The below example section contains a simple personal information input form divided into 3 sections
     that demonstrates the
     <a href="../../#accordion">design pattern for accordion.</a>
