Modal Dialog Example: Add aria-describedby to special instructions input
1. Per feedback from @shirsha in issue #321, added aria-describedby to the special instructions input.
 2. Improved text of the special instructions field description.

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -232,9 +232,9 @@
           <label for="special_instructions">
             <span class="label_text">Special instructions:</span>
           </label>
-          <input id="special_instructions" type="textarea" class="wide_input">
-          <div class="label_info">
-            .e.g., gate code or other information to make it easy for the driver to find you
+          <input id="special_instructions" type="textarea" aria-describedby="special_instructions_desc" class="wide_input">
+          <div class="label_info" id="special_instructions_desc">
+            For example, gate code or other information to help the driver find you
           </div>
         </div>
       </div>
