--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -120,11 +120,11 @@
           <tbody>
             <tr>
               <th><kbd>Down Arrow</kbd><br><kbd>Space</kbd><br><kbd>Enter</kbd></th>
-              <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
+              <td>Opens <code>menu</code> and moves focus to first <code>menuitem</code></td>
             </tr>
             <tr>
               <th><kbd>Up Arrow</kbd></th>
-              <td>Open <code>menu</code> and move focus to last <code>menuitem</code></td>
+              <td>Opens <code>menu</code> and moves focus to last <code>menuitem</code></td>
             </tr>
           </tbody>
         </table>
@@ -349,7 +349,7 @@
         <h2>Javascript and CSS Source Code</h2>
 
         <ul>
-          <li>CSS: <a href="css/menubuttonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
+          <li>CSS: <a href="css/MenubuttonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
           <li>Javascript: <a href="js/Menubutton2.js" type="text/javascript">Menubutton2.js</a></li>
           <li>Javascript: <a href="js/MenuItemLinks.js" type="text/javascript">MenuItemLinks.js</a></li>
           <li>Javascript: <a href="js/PopupMenuLinks.js" type="text/javascript">PopupMenuLinks.js</a></li>
