--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -95,11 +95,11 @@
           <tbody>
             <tr>
               <th><kbd>Down Arrow</kbd><br><kbd>Space</kbd><br><kbd>Enter</kbd></th>
-              <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
+              <td>Opens <code>menu</code> and moves focus to first <code>menuitem</code></td>
             </tr>
             <tr>
               <th><kbd>Up Arrow</kbd></th>
-              <td>Open <code>menu</code> and move focus to last <code>menuitem</code></td>
+              <td>Opens <code>menu</code> and moves focus to last <code>menuitem</code></td>
             </tr>
           </tbody>
         </table>
@@ -113,7 +113,7 @@
           </thead>
           <tbody>
             <tr>
-              <th><kbd>Space</kbd><br><kbd>Enter</kbd></th>
+              <th><kbd>Enter</kbd></th>
               <td>
                 <ul>
                   <li>Activates the menu item, causing the <q>Last Action</q> textbox to be updated.</li>
