File Directory Treeview Example Using Computed Properties: Remove review issue link to complete review process
Remove link to issue #223 from examples/treeview/treeview-1/treeview-1a.html.
The internal task force review process is complete.

--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -23,11 +23,6 @@
     <main>
       <h1>File Directory Treeview Example Using Computed Properties</h1>
       <p>
-        Code is complete for this example.
-        Feedback and progress on editorial work on this page are being tracked in
-        <a href="https://github.com/w3c/aria-practices/issues/223">issue 223.</a>
-      </p>
-      <p>
         The below example implements the
         <a href="../../../#TreeView">Treeview Design Pattern</a>
         to simulate a file selector.
@@ -254,7 +249,7 @@
       <section>
         <h2>Accessibility Features</h2>
         <p>
-          The expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
+          To make the focus indicator easier to see, expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
           To do this, focus, blur, mouseover, and mouseout events trigger application of classes to the <code>span</code> element that contains the visible label of the <code>treeitem</code>.
         </p>
       </section>
