--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -20,11 +20,6 @@
     <main>
       <h1>File Directory Treeview Example Using Declared Properties</h1>
       <p>
-        Code is complete for this example.
-        Feedback and progress on editorial work on this page are being tracked in
-        <a href="https://github.com/w3c/aria-practices/issues/224">issue 224.</a>
-      </p>
-      <p>
         The below example implements the
         <a href="../../../#TreeView">Treeview Design Pattern</a>
         to simulate a file selector.
@@ -414,7 +409,7 @@
       <section>
         <h2>Accessibility Features</h2>
         <p>
-          The expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
+          To make the focus indicator easier to see, the expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
           To do this, focus, blur, mouseover, and mouseout events trigger application of classes to the <code>span</code> element that contains the visible label of the <code>treeitem</code>.
         </p>
       </section>
