--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -463,7 +463,7 @@
       <section>
         <h2>Accessibility Features</h2>
         <p>
-          The expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
+          To make the focus indicator easier to see, the expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
           To do this, focus, blur, mouseover, and mouseout events trigger application of classes to the <code>span</code> element that contains the visible label of the <code>treeitem</code>.
         </p>
       </section>
@@ -745,10 +745,6 @@
           <li>
             Javascript:
             <a href="js/treeitemLinks.js" type="text/javascript">treeitemLinks.js</a>
-          </li>
-          <li>
-            Javascript:
-            <a href="js/treeitemClick.js" type="text/javascript">treeitemClick.js</a>
           </li>
         </ul>
       </section>
