Navigation Treeview Example Using Declared Properties: Add new review issue link
Adds link to issue 405in file examples/treeview/treeview-2/treeview-2b.html.

--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -20,9 +20,9 @@
     <main>
       <h1>Navigation Treeview Example Using Declared Properties</h1>
       <p>
-        Code is complete for this example.
-        Feedback and progress on editorial work on this page are being tracked in
-        <a href="https://github.com/w3c/aria-practices/issues/226">issue 226.</a>
+        <strong>NOTE:</strong>: This example is recently revised and ready for review.
+        Please provide feedback in 
+        <a href="https://github.com/w3c/aria-practices/issues/405">issue 405.</a>
       </p>
     <p>
     The below example demonstrates how the
