--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3625,6 +3625,71 @@
       <p>[Placeholder section that will be resolved by <a href="https://github.com/w3c/aria-practices/issues/84">issue #84</a>.]</p>
     </section>
 
+    <section id="change_log" class="appendix">
+      <h3>Change History</h3>
+      <section id="change_log_2017_june" class="appendix">
+        <h4>Changes in June 2017 Working Draft</h4>
+        <ul>
+          <li>
+            Added the following:
+            <ul>
+              <li>Modal dialog example</li>
+              <li>Disclosure design pattern</li>
+              <li>Example disclosure for FAQ</li>
+              <li>Example disclosure for image description</li>
+              <li>Draft of feed pattern</li>
+              <li>Example feed implementation</li>
+              <li>Example of menu button using aria-activedescendant</li>
+              <li>Example of tabs with manual activation</li>
+            </ul>
+          </li>
+          <li>Design pattern section: moved examples subsection of each design pattern to be
+            the first subsection.</li>
+          <li>
+            Across all example pages:
+            <ul>
+              <li>Improved visual design of tables that document keyboard implementation,
+                roles, states, and properties.</li>
+              <li>Improved consistency of editorial style.</li>
+            </ul>
+          </li>
+          <li>
+            Significant revisions of guidance and implementation were made to the following design
+            patterns and example pages:
+            <ul>
+              <li>Accordion example</li>
+              <li>Alert example</li>
+              <li>Breadcrumb example</li>
+              <li>Button example</li>
+              <li>Checkbox examples</li>
+              <li>Dialog (modal) design pattern</li>
+              <li>Grid examples</li>
+              <li>Landmark examples</li>
+              <li>Link example</li>
+              <li>Listbox example</li>
+              <li>Menubar examples</li>
+              <li>Menu button examples</li>
+              <li>Radio group example</li>
+              <li>Slider design pattern</li>
+              <li>Slider example</li>
+              <li>Example of tabs with automatic activation</li>
+              <li>Tree view examples</li>
+            </ul>
+          </li>
+        </ul>
+        <p>Also see:</p>
+        <ul>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/issues?q=is%3Aclosed+is%3Aissue+milestone%3A%22Jan+2017+Clean+Up%22+sort%3Aupdated-asc">January 2017 Clean Up Milestone</a>, 
+            which lists the GitHub issues that document discussions and reviews of changes included in the June 2017 working draft.
+          </li>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-June-2017-Working-Draft">Detailed change log with links to all commits that are new in the June 2017 working draft.</a>
+          </li>
+        </ul>
+      </section>
+    </section>
+    
     <div data-include='common/acknowledgements.html' data-include-replace='true'></div>
   </section>
 </body>
