fixed broken links to CSS style sheet

--- a/examples/checkbox/checkbox-2/checkbox-2.html
+++ b/examples/checkbox/checkbox-2/checkbox-2.html
@@ -221,7 +221,7 @@
         <ul>
           <li>
             CSS:
-            <a href="css/checkboxMixed.css" type="tex/css">checkboxMixed.css</a>
+            <a href="../css/checkbox.css" type="text/css">checkbox.css</a>
           </li>
           <li>Javascript: <a href="js/checkboxMixed.js" type="text/javascript">checkboxMixed.js</a></li>
           <li>Javascript: <a href="js/controlledCheckbox.js" type="text/javascript">controlledCheckbox.js</a></li>
