--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -156,7 +156,7 @@
     <h2>Javascript and CSS Source Code</h2>
     <ul>
       <li>
-        CSS: <a href="css/checkbox.css" type="tex/css">checkbox.css</a>
+        CSS: <a href="../css/checkbox.css" type="text/css">checkbox.css</a>
       </li>
       <li>
         Javascript: <a href="js/checkbox.js" type="text/javascript">checkbox.js</a>
