Fix link redirects and validity

--- a/examples/menu-button/menu-button-links.html
+++ b/examples/menu-button/menu-button-links.html
@@ -309,7 +309,7 @@
               <td>
                 <ul>
                   <li>Hides the implied <code>listitem</code> role of the <code>li</code> element from assistive technologies.</li>
-                  <li>For more details, see <a href="presentation_role">Intentionally Hiding Semantics with the <code>presentation</code> Role</a>.</li> 
+                  <li>For more details, see <a href="../../presentation_role">Intentionally Hiding Semantics with the <code>presentation</code> Role</a>.</li> 
                 </ul>
               </td>
             </tr>
