--- a/examples/landmarks/banner.html
+++ b/examples/landmarks/banner.html
@@ -123,7 +123,7 @@
               <li><a href="https://www.w3.org/TR/html-aam-1.0/">HTML Accessibility API Mappings 1.0</a></li>
               <li><a href="http://www.w3.org/TR/html5/">HTML5 Specification</a></li>
               <li><a href="https://www.w3.org/TR/html-aria/">ARIA in HTML</a>
-              <li><a href="https://www.w3.org/TR/aria-in-html/">Using ARIA in HTML</a></li>
+              <li><a href="https://www.w3.org/TR/using-aria/">Using ARIA in HTML</a></li>
               <li><a href="http://www.w3.org/TR/WCAG/">WCAG Specification</a></li>
             </ul>
           </aside>
