Changed type="textarea"to type="text"

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -239,7 +239,7 @@
           <label for="special_instructions">
             <span class="label_text">Special instructions:</span>
           </label>
-          <input id="special_instructions" type="textarea" aria-describedby="special_instructions_desc" class="wide_input">
+          <input id="special_instructions" type="text" aria-describedby="special_instructions_desc" class="wide_input">
           <div class="label_info" id="special_instructions_desc">
             For example, gate code or other information to help the driver find you
           </div>
