--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -206,10 +206,8 @@
                 <td>Retreat</td>
               </tr>
               <tr>
-                <th scope="row">Wilna
-                </td>
-                <td>na
-                </th>
+                <th scope="row">Wilna</th>
+                <td>na</td>
                 <td>8,000</td>
                 <td>na</td>
                 <td>na</td>
