Validation error fixes

--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -62,7 +62,7 @@
                   project-2.docx
                 </li>
                 <li role="treeitem"
-                  aria-expanded="false"">
+                  aria-expanded="false">
                   <span>
                     Project 3
                   </span>
