--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -68,7 +68,7 @@
                 aria-level="2"
                 aria-setsize="5"
                 aria-posinset="3"
-                aria-expanded="false"">
+                aria-expanded="false">
                 <span>
                   project-3
                 </span>
