--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="https://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
   <title>WAI-ARIA Authoring Practices 1.1</title>
   <script src="https://www.w3.org/Tools/respec/respec-w3c-common" class="remove"></script>
@@ -32,7 +32,7 @@
     <p>
       This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.1.
       To see planns for the complete guide, review the
-      <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&sort=due_date&state=open">Authoring Practices Milestone Plan</a>.
+      <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>.
     </p>
     <p>
       Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations.
@@ -610,6 +610,7 @@
               <li>Application code prevents all users from interacting in any way with content outside of it.</li>
               <li>Visual styling obscures the content outside of it.</li>
             </ol>
+          </li>
           <li>
             The <code>aria-modal</code> property introduced by ARIA 1.1 replaces
             <a href="#aria-hidden" class="state-reference">aria-hidden</a>
