--- a/aria-practices.html
+++ b/aria-practices.html
@@ -20,16 +20,8 @@
   </section>
 
   <section id="sotd">
-    <p>
-      This is an editor's draft by the
-      <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>
-      of the
-      <a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
-      It supports the
-      <a href="" class="specref">WAI-ARIA 1.1</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>]
-      specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
-    </p>
-    <p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.1. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
+  	<p>This is a <a href="https://www.w3.org/2015/Process-20150901/#RecsWD">Working Draft</a> by the <a href="http://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a> of the <a href="http://www.w3.org/WAI/">Web Accessibility Initiative</a>. It supports the <a href="" class="specref">WAI-ARIA 1.1</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>] specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification. This version includes additional refinements to the authoring guidance.</p>
+  	<p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.1. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
     <p>
       Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations.
       The Accessible Rich Internet Applications Working Group asks in particular:
