add meta charsset

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
+	<meta charset="utf-8" />
   <title>WAI-ARIA Authoring Practices 1.1</title>
   <script src="https://www.w3.org/Tools/respec/respec-w3c-common" class="remove"></script>
   <script src="common/script/resolveReferences.js" class="remove"></script>
