--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -219,7 +219,7 @@
 
   </main>
   <nav>
-    <a href="../../#slider">Slider Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../#slidertwothumb">Slider (Multi-Thumb) design pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
